--- a/app/src/main/res/layout/activity_admin_permission.xml
+++ b/app/src/main/res/layout/activity_admin_permission.xml
@@ -19,18 +19,19 @@
         app:layout_constraintVertical_bias="0.55" />
 
     <TextView
-        android:id="@+id/textView7"
-        android:layout_width="412dp"
-        android:layout_height="69dp"
-        android:background="#00BCD4"
-        android:text="Check Snaks"
+        android:layout_width="0dp"
+        android:layout_height="70dp"
+        android:background="#00C3AF"
+        android:gravity="center"
+        android:text="Add Snacks"
         android:textAlignment="center"
-        android:textColor="#9C27B0"
-        android:textSize="42sp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.003" />
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
