--- a/app/src/main/res/layout/activity_grab_snack.xml
+++ b/app/src/main/res/layout/activity_grab_snack.xml
@@ -22,6 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Verify Your Identity"
+            android:textStyle="bold"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -50,6 +51,10 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:text="Verify"
+
+        app:cornerRadius="30dp"
+        android:backgroundTint="#9cd10a"
+
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.507"
@@ -61,6 +66,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginTop="16dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/identity_imageView"
