--- a/app/src/main/res/layout/activity_reserve_snack.xml
+++ b/app/src/main/res/layout/activity_reserve_snack.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Avaliable Items"
+
+        android:textStyle="bold"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
