--- a/app/src/main/res/layout/check_items.xml
+++ b/app/src/main/res/layout/check_items.xml
@@ -32,6 +32,7 @@
                     android:layout_height="48dp"
                     android:layout_marginBottom="8dp"
                     android:layout_weight="0.1"
+                    android:backgroundTint="#9cd10a"
                     android:paddingLeft="4dp"
                     android:paddingRight="4dp"
                     android:text="-"
@@ -61,6 +62,7 @@
                     android:paddingRight="4dp"
                     android:paddingBottom="4dp"
                     android:text="+"
+                    android:backgroundTint="#9cd10a"
                     android:textSize="20sp"
                     app:cornerRadius="16dp"
                     app:iconPadding="0dp"
