--- a/app/src/main/res/layout/activity_admin_userllist_acitivity.xml
+++ b/app/src/main/res/layout/activity_admin_userllist_acitivity.xml
@@ -9,7 +9,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:background="#B8DCB9"
         app:layout_constraintBottom_toTopOf="@+id/user_recycleview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -17,14 +16,23 @@
 
         <TextView
             android:id="@+id/textView21"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Users lists"
-            android:textSize="34sp"
+            android:layout_width="0dp"
+            android:layout_height="70dp"
+            android:background="#00C3AF"
+            android:gravity="center"
+            android:text="User List"
+            android:textAlignment="center"
+
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
