--- a/app/src/main/res/layout/rows_userlist.xml
+++ b/app/src/main/res/layout/rows_userlist.xml
@@ -20,14 +20,15 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="38dp"
-            android:background="#F0F4DF">
+            android:background="#FFFFFF">
 
             <TextView
                 android:id="@+id/textView17"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="48dp"
+                android:layout_marginStart="20dp"
                 android:text="User "
+                android:textStyle="bold"
                 android:textAlignment="viewStart"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
