--- a/app/src/main/res/layout/rows_userreport.xml
+++ b/app/src/main/res/layout/rows_userreport.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="80dp">
+    android:layout_height="65dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="409dp"
@@ -24,6 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="#BDBDBD"
                 android:text="TextView" />
         </LinearLayout>
 
@@ -34,12 +35,14 @@
 
             <TextView
                 android:id="@+id/usertimestamp"
-                android:layout_width="80dp"
+                android:layout_width="164dp"
                 android:layout_height="30dp"
                 android:layout_marginVertical="20dp"
                 android:layout_weight="1"
                 android:text="TextView"
-                android:textAlignment="center" />
+
+                android:textAlignment="center"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/useritemtv"
@@ -48,6 +51,7 @@
                 android:layout_marginVertical="20dp"
                 android:layout_weight="1"
                 android:text="TextView"
+                android:textSize="16sp"
                 android:textAlignment="center" />
 
             <TextView
@@ -57,6 +61,8 @@
                 android:layout_marginVertical="20dp"
                 android:layout_weight="1"
                 android:text="TextView"
+                android:textStyle="bold"
+                android:textSize="16sp"
                 android:textAlignment="center" />
 
         </LinearLayout>
